// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component Using snapshot testing 1`] = `
<DocumentFragment>
  <div
    id="table-wrapper"
  >
    <div
      id="table"
    >
      <div
        class="table-header"
      >
        <div
          class="table-row"
        >
          <div
            class="table-col"
            style="width: calc(9ch + 26px);"
          >
            <h6>
              Organization
            </h6>
            <a
              class="icon"
            >
              <svg
                fill="none"
                height="12"
                viewBox="0 0 16 12"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.22222 11.3333H9.77778V9.55554H6.22222V11.3333ZM0 0.666656V2.44443H16V0.666656H0ZM2.66667 6.88888H13.3333V5.1111H2.66667V6.88888Z"
                  fill="#545F7D"
                />
              </svg>
            </a>
            <div
              id="filter-menu"
            >
              <div
                class="form-group"
              >
                <label
                  for="organization"
                >
                  Organization
                </label>
                <div
                  data-id="organization"
                  id="drop-down"
                >
                  <div
                    class="dropdown-btn"
                  >
                    <span>
                      Select
                    </span>
                    <a>
                      <svg
                        fill="none"
                        height="8"
                        viewBox="0 0 12 8"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                          fill="#213F7D"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="username"
                >
                  Username
                </label>
                <input
                  placeholder="User"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="email"
                >
                  Email
                </label>
                <input
                  placeholder="Email"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="date"
                >
                  Date
                </label>
                <div
                  class="date-input"
                >
                  <input
                    placeholder="Date"
                    type="text"
                  />
                  <a>
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        clip-path="url(#clip0_5530_2554)"
                      >
                        <path
                          d="M14.9919 2.16002H12.7037V0.768152C12.7037 0.560024 12.5437 0.400024 12.3356 0.400024H10.6562C10.4481 0.400024 10.2881 0.560024 10.2881 0.768152V2.16002H5.7118V0.768152C5.7118 0.560024 5.5518 0.400024 5.34367 0.400024H3.66367C3.45554 0.400024 3.29554 0.560024 3.29554 0.768152V2.16002H1.00802C0.816149 2.16002 0.639893 2.32002 0.639893 2.52815V15.2482C0.639893 15.4563 0.799893 15.6163 1.00802 15.6163H14.9917C15.1836 15.6163 15.3598 15.4563 15.3598 15.2482V2.52815C15.3598 2.32002 15.1836 2.16002 14.9917 2.16002H14.9919ZM11.0082 1.13628H11.9682V3.24812H11.0082V1.13628ZM4.01637 1.13628H4.97637V3.24812H4.01637V1.13628ZM14.6239 14.8638H1.37637V5.5038H14.6245L14.6239 14.8638Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M3.19994 13.2164H4.91178C5.00803 13.2164 5.08803 13.1364 5.08803 13.0401V11.3119C5.08803 11.2157 5.00803 11.1357 4.91178 11.1357L3.19994 11.1363C3.10369 11.1363 3.02368 11.2163 3.02368 11.3126V13.0244C3.02368 13.1363 3.10368 13.2163 3.19994 13.2163V13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M7.13635 13.2164H8.84819C8.94444 13.2164 9.02444 13.1364 9.02444 13.0401L9.02382 11.3119C9.02382 11.2157 8.94382 11.1357 8.84756 11.1357L7.13636 11.1363C7.04011 11.1363 6.96011 11.2163 6.96011 11.3126V13.0244C6.94386 13.1363 7.02386 13.2163 7.13636 13.2163L7.13635 13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M11.0565 13.2164H12.7684C12.8646 13.2164 12.9446 13.1364 12.9446 13.0401L12.944 11.3119C12.944 11.2157 12.864 11.1357 12.7677 11.1357L11.0565 11.1363C10.9603 11.1363 10.8803 11.2163 10.8803 11.3126V13.0244C10.864 13.1363 10.944 13.2163 11.0565 13.2163L11.0565 13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M3.19994 9.26372H4.91178C5.00803 9.26372 5.08803 9.18372 5.08803 9.08746V7.37627C5.08803 7.28002 5.00803 7.20001 4.91178 7.20001H3.19994C3.10369 7.20001 3.02368 7.28001 3.02368 7.37627V9.0881C3.02368 9.18373 3.10368 9.26374 3.19994 9.26374V9.26372Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M7.13635 9.26372H8.84819C8.94444 9.26372 9.02444 9.18372 9.02444 9.08746L9.02382 7.37627C9.02382 7.28002 8.94382 7.20001 8.84756 7.20001H7.13636C7.04011 7.20001 6.96011 7.28001 6.96011 7.37627V9.0881C6.94386 9.18373 7.02386 9.26374 7.13636 9.26374L7.13635 9.26372Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M11.0565 9.26372H12.7684C12.8646 9.26372 12.9446 9.18372 12.9446 9.08746L12.944 7.37627C12.944 7.28002 12.864 7.20001 12.7677 7.20001H11.0565C10.9603 7.20001 10.8803 7.28001 10.8803 7.37627V9.0881C10.864 9.18373 10.944 9.26374 11.0565 9.26374L11.0565 9.26372Z"
                          fill="#545F7D"
                        />
                      </g>
                      <defs>
                        <clippath
                          id="clip0_5530_2554"
                        >
                          <rect
                            fill="white"
                            height="16"
                            width="16"
                          />
                        </clippath>
                      </defs>
                    </svg>
                  </a>
                  <input
                    id="date"
                    name="date"
                    type="date"
                    value="2023-04-25"
                  />
                </div>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="phone"
                >
                  Phone Number
                </label>
                <input
                  placeholder="Phone Number"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="status"
                >
                  Status
                </label>
                <div
                  data-id="status"
                  id="drop-down"
                >
                  <div
                    class="dropdown-btn"
                  >
                    <span>
                      Select
                    </span>
                    <a>
                      <svg
                        fill="none"
                        height="8"
                        viewBox="0 0 12 8"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                          fill="#213F7D"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="buttons"
              >
                <div
                  class="btn btn-outline-dark"
                >
                  Reset
                </div>
                <div
                  class="btn btn-green"
                >
                  Filter
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="table-body"
      >
        <div
          class="table-row"
        >
          <div
            class="table-col"
            style="width: calc(9ch + 26px);"
          >
            <span>
              Lendsqr
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      id="table-footer"
    >
      <div
        class="d-flex limits align-items-center"
      >
        <span>
          Showing
        </span>
        <div
          data-id="limit"
          id="drop-down"
        >
          <div
            class="dropdown-btn"
          >
            <span>
              10
            </span>
            <a>
              <svg
                fill="none"
                height="8"
                viewBox="0 0 12 8"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                  fill="#213F7D"
                />
              </svg>
            </a>
          </div>
        </div>
        <span>
          out of 1
        </span>
      </div>
      <div
        class="d-flex indexes align-items-center"
      >
        <a
          class="active"
        >
          <svg
            fill="none"
            height="8"
            viewBox="0 0 12 8"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
              fill="#213F7D"
            />
          </svg>
        </a>
        <div
          class="numbers"
        >
          <span
            class="active"
          >
            1
          </span>
        </div>
        <a
          class="active"
        >
          <svg
            fill="none"
            height="8"
            viewBox="0 0 12 8"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
              fill="#213F7D"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table component columns renders correctly 1`] = `
<DocumentFragment>
  <div
    id="table-wrapper"
  >
    <div
      id="table"
    >
      <div
        class="table-header"
      >
        <div
          class="table-row"
        >
          <div
            class="table-col"
            style="width: calc(9ch + 26px);"
          >
            <h6>
              Organization
            </h6>
            <a
              class="icon"
            >
              <svg
                fill="none"
                height="12"
                viewBox="0 0 16 12"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.22222 11.3333H9.77778V9.55554H6.22222V11.3333ZM0 0.666656V2.44443H16V0.666656H0ZM2.66667 6.88888H13.3333V5.1111H2.66667V6.88888Z"
                  fill="#545F7D"
                />
              </svg>
            </a>
            <div
              id="filter-menu"
            >
              <div
                class="form-group"
              >
                <label
                  for="organization"
                >
                  Organization
                </label>
                <div
                  data-id="organization"
                  id="drop-down"
                >
                  <div
                    class="dropdown-btn"
                  >
                    <span>
                      Select
                    </span>
                    <a>
                      <svg
                        fill="none"
                        height="8"
                        viewBox="0 0 12 8"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                          fill="#213F7D"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="username"
                >
                  Username
                </label>
                <input
                  placeholder="User"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="email"
                >
                  Email
                </label>
                <input
                  placeholder="Email"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="date"
                >
                  Date
                </label>
                <div
                  class="date-input"
                >
                  <input
                    placeholder="Date"
                    type="text"
                  />
                  <a>
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        clip-path="url(#clip0_5530_2554)"
                      >
                        <path
                          d="M14.9919 2.16002H12.7037V0.768152C12.7037 0.560024 12.5437 0.400024 12.3356 0.400024H10.6562C10.4481 0.400024 10.2881 0.560024 10.2881 0.768152V2.16002H5.7118V0.768152C5.7118 0.560024 5.5518 0.400024 5.34367 0.400024H3.66367C3.45554 0.400024 3.29554 0.560024 3.29554 0.768152V2.16002H1.00802C0.816149 2.16002 0.639893 2.32002 0.639893 2.52815V15.2482C0.639893 15.4563 0.799893 15.6163 1.00802 15.6163H14.9917C15.1836 15.6163 15.3598 15.4563 15.3598 15.2482V2.52815C15.3598 2.32002 15.1836 2.16002 14.9917 2.16002H14.9919ZM11.0082 1.13628H11.9682V3.24812H11.0082V1.13628ZM4.01637 1.13628H4.97637V3.24812H4.01637V1.13628ZM14.6239 14.8638H1.37637V5.5038H14.6245L14.6239 14.8638Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M3.19994 13.2164H4.91178C5.00803 13.2164 5.08803 13.1364 5.08803 13.0401V11.3119C5.08803 11.2157 5.00803 11.1357 4.91178 11.1357L3.19994 11.1363C3.10369 11.1363 3.02368 11.2163 3.02368 11.3126V13.0244C3.02368 13.1363 3.10368 13.2163 3.19994 13.2163V13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M7.13635 13.2164H8.84819C8.94444 13.2164 9.02444 13.1364 9.02444 13.0401L9.02382 11.3119C9.02382 11.2157 8.94382 11.1357 8.84756 11.1357L7.13636 11.1363C7.04011 11.1363 6.96011 11.2163 6.96011 11.3126V13.0244C6.94386 13.1363 7.02386 13.2163 7.13636 13.2163L7.13635 13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M11.0565 13.2164H12.7684C12.8646 13.2164 12.9446 13.1364 12.9446 13.0401L12.944 11.3119C12.944 11.2157 12.864 11.1357 12.7677 11.1357L11.0565 11.1363C10.9603 11.1363 10.8803 11.2163 10.8803 11.3126V13.0244C10.864 13.1363 10.944 13.2163 11.0565 13.2163L11.0565 13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M3.19994 9.26372H4.91178C5.00803 9.26372 5.08803 9.18372 5.08803 9.08746V7.37627C5.08803 7.28002 5.00803 7.20001 4.91178 7.20001H3.19994C3.10369 7.20001 3.02368 7.28001 3.02368 7.37627V9.0881C3.02368 9.18373 3.10368 9.26374 3.19994 9.26374V9.26372Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M7.13635 9.26372H8.84819C8.94444 9.26372 9.02444 9.18372 9.02444 9.08746L9.02382 7.37627C9.02382 7.28002 8.94382 7.20001 8.84756 7.20001H7.13636C7.04011 7.20001 6.96011 7.28001 6.96011 7.37627V9.0881C6.94386 9.18373 7.02386 9.26374 7.13636 9.26374L7.13635 9.26372Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M11.0565 9.26372H12.7684C12.8646 9.26372 12.9446 9.18372 12.9446 9.08746L12.944 7.37627C12.944 7.28002 12.864 7.20001 12.7677 7.20001H11.0565C10.9603 7.20001 10.8803 7.28001 10.8803 7.37627V9.0881C10.864 9.18373 10.944 9.26374 11.0565 9.26374L11.0565 9.26372Z"
                          fill="#545F7D"
                        />
                      </g>
                      <defs>
                        <clippath
                          id="clip0_5530_2554"
                        >
                          <rect
                            fill="white"
                            height="16"
                            width="16"
                          />
                        </clippath>
                      </defs>
                    </svg>
                  </a>
                  <input
                    id="date"
                    name="date"
                    type="date"
                    value="2023-04-25"
                  />
                </div>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="phone"
                >
                  Phone Number
                </label>
                <input
                  placeholder="Phone Number"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="status"
                >
                  Status
                </label>
                <div
                  data-id="status"
                  id="drop-down"
                >
                  <div
                    class="dropdown-btn"
                  >
                    <span>
                      Select
                    </span>
                    <a>
                      <svg
                        fill="none"
                        height="8"
                        viewBox="0 0 12 8"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                          fill="#213F7D"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="buttons"
              >
                <div
                  class="btn btn-outline-dark"
                >
                  Reset
                </div>
                <div
                  class="btn btn-green"
                >
                  Filter
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="table-body"
      >
        <div
          class="table-row"
        >
          <div
            class="table-col"
            style="width: calc(9ch + 26px);"
          >
            <span>
              Lendsqr
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      id="table-footer"
    >
      <div
        class="d-flex limits align-items-center"
      >
        <span>
          Showing
        </span>
        <div
          data-id="limit"
          id="drop-down"
        >
          <div
            class="dropdown-btn"
          >
            <span>
              10
            </span>
            <a>
              <svg
                fill="none"
                height="8"
                viewBox="0 0 12 8"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                  fill="#213F7D"
                />
              </svg>
            </a>
          </div>
        </div>
        <span>
          out of 1
        </span>
      </div>
      <div
        class="d-flex indexes align-items-center"
      >
        <a
          class="active"
        >
          <svg
            fill="none"
            height="8"
            viewBox="0 0 12 8"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
              fill="#213F7D"
            />
          </svg>
        </a>
        <div
          class="numbers"
        >
          <span
            class="active"
          >
            1
          </span>
        </div>
        <a
          class="active"
        >
          <svg
            fill="none"
            height="8"
            viewBox="0 0 12 8"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
              fill="#213F7D"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table component no columns 1`] = `
<DocumentFragment>
  <div
    id="table-wrapper"
  >
    <div
      id="table"
    >
      <div
        class="table-header"
      >
        <div
          class="table-row"
        >
          <div
            class="table-col"
            style="width: calc(9ch + 26px);"
          >
            <h6>
              Organization
            </h6>
            <a
              class="icon"
            >
              <svg
                fill="none"
                height="12"
                viewBox="0 0 16 12"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.22222 11.3333H9.77778V9.55554H6.22222V11.3333ZM0 0.666656V2.44443H16V0.666656H0ZM2.66667 6.88888H13.3333V5.1111H2.66667V6.88888Z"
                  fill="#545F7D"
                />
              </svg>
            </a>
            <div
              id="filter-menu"
            >
              <div
                class="form-group"
              >
                <label
                  for="organization"
                >
                  Organization
                </label>
                <div
                  data-id="organization"
                  id="drop-down"
                >
                  <div
                    class="dropdown-btn"
                  >
                    <span>
                      Select
                    </span>
                    <a>
                      <svg
                        fill="none"
                        height="8"
                        viewBox="0 0 12 8"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                          fill="#213F7D"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="username"
                >
                  Username
                </label>
                <input
                  placeholder="User"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="email"
                >
                  Email
                </label>
                <input
                  placeholder="Email"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="date"
                >
                  Date
                </label>
                <div
                  class="date-input"
                >
                  <input
                    placeholder="Date"
                    type="text"
                  />
                  <a>
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        clip-path="url(#clip0_5530_2554)"
                      >
                        <path
                          d="M14.9919 2.16002H12.7037V0.768152C12.7037 0.560024 12.5437 0.400024 12.3356 0.400024H10.6562C10.4481 0.400024 10.2881 0.560024 10.2881 0.768152V2.16002H5.7118V0.768152C5.7118 0.560024 5.5518 0.400024 5.34367 0.400024H3.66367C3.45554 0.400024 3.29554 0.560024 3.29554 0.768152V2.16002H1.00802C0.816149 2.16002 0.639893 2.32002 0.639893 2.52815V15.2482C0.639893 15.4563 0.799893 15.6163 1.00802 15.6163H14.9917C15.1836 15.6163 15.3598 15.4563 15.3598 15.2482V2.52815C15.3598 2.32002 15.1836 2.16002 14.9917 2.16002H14.9919ZM11.0082 1.13628H11.9682V3.24812H11.0082V1.13628ZM4.01637 1.13628H4.97637V3.24812H4.01637V1.13628ZM14.6239 14.8638H1.37637V5.5038H14.6245L14.6239 14.8638Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M3.19994 13.2164H4.91178C5.00803 13.2164 5.08803 13.1364 5.08803 13.0401V11.3119C5.08803 11.2157 5.00803 11.1357 4.91178 11.1357L3.19994 11.1363C3.10369 11.1363 3.02368 11.2163 3.02368 11.3126V13.0244C3.02368 13.1363 3.10368 13.2163 3.19994 13.2163V13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M7.13635 13.2164H8.84819C8.94444 13.2164 9.02444 13.1364 9.02444 13.0401L9.02382 11.3119C9.02382 11.2157 8.94382 11.1357 8.84756 11.1357L7.13636 11.1363C7.04011 11.1363 6.96011 11.2163 6.96011 11.3126V13.0244C6.94386 13.1363 7.02386 13.2163 7.13636 13.2163L7.13635 13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M11.0565 13.2164H12.7684C12.8646 13.2164 12.9446 13.1364 12.9446 13.0401L12.944 11.3119C12.944 11.2157 12.864 11.1357 12.7677 11.1357L11.0565 11.1363C10.9603 11.1363 10.8803 11.2163 10.8803 11.3126V13.0244C10.864 13.1363 10.944 13.2163 11.0565 13.2163L11.0565 13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M3.19994 9.26372H4.91178C5.00803 9.26372 5.08803 9.18372 5.08803 9.08746V7.37627C5.08803 7.28002 5.00803 7.20001 4.91178 7.20001H3.19994C3.10369 7.20001 3.02368 7.28001 3.02368 7.37627V9.0881C3.02368 9.18373 3.10368 9.26374 3.19994 9.26374V9.26372Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M7.13635 9.26372H8.84819C8.94444 9.26372 9.02444 9.18372 9.02444 9.08746L9.02382 7.37627C9.02382 7.28002 8.94382 7.20001 8.84756 7.20001H7.13636C7.04011 7.20001 6.96011 7.28001 6.96011 7.37627V9.0881C6.94386 9.18373 7.02386 9.26374 7.13636 9.26374L7.13635 9.26372Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M11.0565 9.26372H12.7684C12.8646 9.26372 12.9446 9.18372 12.9446 9.08746L12.944 7.37627C12.944 7.28002 12.864 7.20001 12.7677 7.20001H11.0565C10.9603 7.20001 10.8803 7.28001 10.8803 7.37627V9.0881C10.864 9.18373 10.944 9.26374 11.0565 9.26374L11.0565 9.26372Z"
                          fill="#545F7D"
                        />
                      </g>
                      <defs>
                        <clippath
                          id="clip0_5530_2554"
                        >
                          <rect
                            fill="white"
                            height="16"
                            width="16"
                          />
                        </clippath>
                      </defs>
                    </svg>
                  </a>
                  <input
                    id="date"
                    name="date"
                    type="date"
                    value="2023-04-25"
                  />
                </div>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="phone"
                >
                  Phone Number
                </label>
                <input
                  placeholder="Phone Number"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="status"
                >
                  Status
                </label>
                <div
                  data-id="status"
                  id="drop-down"
                >
                  <div
                    class="dropdown-btn"
                  >
                    <span>
                      Select
                    </span>
                    <a>
                      <svg
                        fill="none"
                        height="8"
                        viewBox="0 0 12 8"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                          fill="#213F7D"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="buttons"
              >
                <div
                  class="btn btn-outline-dark"
                >
                  Reset
                </div>
                <div
                  class="btn btn-green"
                >
                  Filter
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="table-body"
      />
    </div>
    <div
      id="table-footer"
    >
      <div
        class="d-flex limits align-items-center"
      >
        <span>
          Showing
        </span>
        <div
          data-id="limit"
          id="drop-down"
        >
          <div
            class="dropdown-btn"
          >
            <span>
              10
            </span>
            <a>
              <svg
                fill="none"
                height="8"
                viewBox="0 0 12 8"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                  fill="#213F7D"
                />
              </svg>
            </a>
          </div>
        </div>
        <span>
          out of 0
        </span>
      </div>
      <div
        class="d-flex indexes align-items-center"
      >
        <a
          class="active"
        >
          <svg
            fill="none"
            height="8"
            viewBox="0 0 12 8"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
              fill="#213F7D"
            />
          </svg>
        </a>
        <div
          class="numbers"
        />
        <a
          class=""
        >
          <svg
            fill="none"
            height="8"
            viewBox="0 0 12 8"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
              fill="#213F7D"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table component renders correctly 1`] = `
LoadedCheerio {
  "0": <div
    id="table-wrapper"
  >
    <div
      id="table"
    >
      <div
        class="table-header"
      >
        <div
          class="table-row"
        >
          <div
            class="table-col"
            style="width: calc(9ch + 26px);"
          >
            <h6>
              Organization
            </h6>
            <a
              class="icon"
            >
              <svg
                fill="none"
                height="12"
                viewBox="0 0 16 12"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.22222 11.3333H9.77778V9.55554H6.22222V11.3333ZM0 0.666656V2.44443H16V0.666656H0ZM2.66667 6.88888H13.3333V5.1111H2.66667V6.88888Z"
                  fill="#545F7D"
                />
              </svg>
            </a>
            <div
              id="filter-menu"
            >
              <div
                class="form-group"
              >
                <label
                  for="organization"
                >
                  Organization
                </label>
                <div
                  data-id="organization"
                  id="drop-down"
                >
                  <div
                    class="dropdown-btn"
                  >
                    <span>
                      Select
                    </span>
                    <a>
                      <svg
                        fill="none"
                        height="8"
                        viewBox="0 0 12 8"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                          fill="#213F7D"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="username"
                >
                  Username
                </label>
                <input
                  placeholder="User"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="email"
                >
                  Email
                </label>
                <input
                  placeholder="Email"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="date"
                >
                  Date
                </label>
                <div
                  class="date-input"
                >
                  <input
                    placeholder="Date"
                    type="text"
                  />
                  <a>
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        clip-path="url(#clip0_5530_2554)"
                      >
                        <path
                          d="M14.9919 2.16002H12.7037V0.768152C12.7037 0.560024 12.5437 0.400024 12.3356 0.400024H10.6562C10.4481 0.400024 10.2881 0.560024 10.2881 0.768152V2.16002H5.7118V0.768152C5.7118 0.560024 5.5518 0.400024 5.34367 0.400024H3.66367C3.45554 0.400024 3.29554 0.560024 3.29554 0.768152V2.16002H1.00802C0.816149 2.16002 0.639893 2.32002 0.639893 2.52815V15.2482C0.639893 15.4563 0.799893 15.6163 1.00802 15.6163H14.9917C15.1836 15.6163 15.3598 15.4563 15.3598 15.2482V2.52815C15.3598 2.32002 15.1836 2.16002 14.9917 2.16002H14.9919ZM11.0082 1.13628H11.9682V3.24812H11.0082V1.13628ZM4.01637 1.13628H4.97637V3.24812H4.01637V1.13628ZM14.6239 14.8638H1.37637V5.5038H14.6245L14.6239 14.8638Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M3.19994 13.2164H4.91178C5.00803 13.2164 5.08803 13.1364 5.08803 13.0401V11.3119C5.08803 11.2157 5.00803 11.1357 4.91178 11.1357L3.19994 11.1363C3.10369 11.1363 3.02368 11.2163 3.02368 11.3126V13.0244C3.02368 13.1363 3.10368 13.2163 3.19994 13.2163V13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M7.13635 13.2164H8.84819C8.94444 13.2164 9.02444 13.1364 9.02444 13.0401L9.02382 11.3119C9.02382 11.2157 8.94382 11.1357 8.84756 11.1357L7.13636 11.1363C7.04011 11.1363 6.96011 11.2163 6.96011 11.3126V13.0244C6.94386 13.1363 7.02386 13.2163 7.13636 13.2163L7.13635 13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M11.0565 13.2164H12.7684C12.8646 13.2164 12.9446 13.1364 12.9446 13.0401L12.944 11.3119C12.944 11.2157 12.864 11.1357 12.7677 11.1357L11.0565 11.1363C10.9603 11.1363 10.8803 11.2163 10.8803 11.3126V13.0244C10.864 13.1363 10.944 13.2163 11.0565 13.2163L11.0565 13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M3.19994 9.26372H4.91178C5.00803 9.26372 5.08803 9.18372 5.08803 9.08746V7.37627C5.08803 7.28002 5.00803 7.20001 4.91178 7.20001H3.19994C3.10369 7.20001 3.02368 7.28001 3.02368 7.37627V9.0881C3.02368 9.18373 3.10368 9.26374 3.19994 9.26374V9.26372Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M7.13635 9.26372H8.84819C8.94444 9.26372 9.02444 9.18372 9.02444 9.08746L9.02382 7.37627C9.02382 7.28002 8.94382 7.20001 8.84756 7.20001H7.13636C7.04011 7.20001 6.96011 7.28001 6.96011 7.37627V9.0881C6.94386 9.18373 7.02386 9.26374 7.13636 9.26374L7.13635 9.26372Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M11.0565 9.26372H12.7684C12.8646 9.26372 12.9446 9.18372 12.9446 9.08746L12.944 7.37627C12.944 7.28002 12.864 7.20001 12.7677 7.20001H11.0565C10.9603 7.20001 10.8803 7.28001 10.8803 7.37627V9.0881C10.864 9.18373 10.944 9.26374 11.0565 9.26374L11.0565 9.26372Z"
                          fill="#545F7D"
                        />
                      </g>
                      <defs>
                        <clippath
                          id="clip0_5530_2554"
                        >
                          <rect
                            fill="white"
                            height="16"
                            width="16"
                          />
                        </clippath>
                      </defs>
                    </svg>
                  </a>
                  <input
                    id="date"
                    name="date"
                    type="date"
                    value="2023-04-25"
                  />
                </div>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="phone"
                >
                  Phone Number
                </label>
                <input
                  placeholder="Phone Number"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="status"
                >
                  Status
                </label>
                <div
                  data-id="status"
                  id="drop-down"
                >
                  <div
                    class="dropdown-btn"
                  >
                    <span>
                      Select
                    </span>
                    <a>
                      <svg
                        fill="none"
                        height="8"
                        viewBox="0 0 12 8"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                          fill="#213F7D"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="buttons"
              >
                <div
                  class="btn btn-outline-dark"
                >
                  Reset
                </div>
                <div
                  class="btn btn-green"
                >
                  Filter
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="table-body"
      >
        <div
          class="table-row"
        >
          <div
            class="table-col"
            style="width: calc(9ch + 26px);"
          >
            <span>
              Lendsqr
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      id="table-footer"
    >
      <div
        class="d-flex limits align-items-center"
      >
        <span>
          Showing
        </span>
        <div
          data-id="limit"
          id="drop-down"
        >
          <div
            class="dropdown-btn"
          >
            <span>
              10
            </span>
            <a>
              <svg
                fill="none"
                height="8"
                viewBox="0 0 12 8"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                  fill="#213F7D"
                />
              </svg>
            </a>
          </div>
        </div>
        <span>
          out of 1
        </span>
      </div>
      <div
        class="d-flex indexes align-items-center"
      >
        <a
          class="active"
        >
          <svg
            fill="none"
            height="8"
            viewBox="0 0 12 8"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
              fill="#213F7D"
            />
          </svg>
        </a>
        <div
          class="numbers"
        >
          <span
            class="active"
          >
            1
          </span>
        </div>
        <a
          class="active"
        >
          <svg
            fill="none"
            height="8"
            viewBox="0 0 12 8"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
              fill="#213F7D"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Table component rows renders correctly 1`] = `
<DocumentFragment>
  <div
    id="table-wrapper"
  >
    <div
      id="table"
    >
      <div
        class="table-header"
      >
        <div
          class="table-row"
        >
          <div
            class="table-col"
            style="width: calc(9ch + 26px);"
          >
            <h6>
              Organization
            </h6>
            <a
              class="icon"
            >
              <svg
                fill="none"
                height="12"
                viewBox="0 0 16 12"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.22222 11.3333H9.77778V9.55554H6.22222V11.3333ZM0 0.666656V2.44443H16V0.666656H0ZM2.66667 6.88888H13.3333V5.1111H2.66667V6.88888Z"
                  fill="#545F7D"
                />
              </svg>
            </a>
            <div
              id="filter-menu"
            >
              <div
                class="form-group"
              >
                <label
                  for="organization"
                >
                  Organization
                </label>
                <div
                  data-id="organization"
                  id="drop-down"
                >
                  <div
                    class="dropdown-btn"
                  >
                    <span>
                      Select
                    </span>
                    <a>
                      <svg
                        fill="none"
                        height="8"
                        viewBox="0 0 12 8"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                          fill="#213F7D"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="username"
                >
                  Username
                </label>
                <input
                  placeholder="User"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="email"
                >
                  Email
                </label>
                <input
                  placeholder="Email"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="date"
                >
                  Date
                </label>
                <div
                  class="date-input"
                >
                  <input
                    placeholder="Date"
                    type="text"
                  />
                  <a>
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        clip-path="url(#clip0_5530_2554)"
                      >
                        <path
                          d="M14.9919 2.16002H12.7037V0.768152C12.7037 0.560024 12.5437 0.400024 12.3356 0.400024H10.6562C10.4481 0.400024 10.2881 0.560024 10.2881 0.768152V2.16002H5.7118V0.768152C5.7118 0.560024 5.5518 0.400024 5.34367 0.400024H3.66367C3.45554 0.400024 3.29554 0.560024 3.29554 0.768152V2.16002H1.00802C0.816149 2.16002 0.639893 2.32002 0.639893 2.52815V15.2482C0.639893 15.4563 0.799893 15.6163 1.00802 15.6163H14.9917C15.1836 15.6163 15.3598 15.4563 15.3598 15.2482V2.52815C15.3598 2.32002 15.1836 2.16002 14.9917 2.16002H14.9919ZM11.0082 1.13628H11.9682V3.24812H11.0082V1.13628ZM4.01637 1.13628H4.97637V3.24812H4.01637V1.13628ZM14.6239 14.8638H1.37637V5.5038H14.6245L14.6239 14.8638Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M3.19994 13.2164H4.91178C5.00803 13.2164 5.08803 13.1364 5.08803 13.0401V11.3119C5.08803 11.2157 5.00803 11.1357 4.91178 11.1357L3.19994 11.1363C3.10369 11.1363 3.02368 11.2163 3.02368 11.3126V13.0244C3.02368 13.1363 3.10368 13.2163 3.19994 13.2163V13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M7.13635 13.2164H8.84819C8.94444 13.2164 9.02444 13.1364 9.02444 13.0401L9.02382 11.3119C9.02382 11.2157 8.94382 11.1357 8.84756 11.1357L7.13636 11.1363C7.04011 11.1363 6.96011 11.2163 6.96011 11.3126V13.0244C6.94386 13.1363 7.02386 13.2163 7.13636 13.2163L7.13635 13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M11.0565 13.2164H12.7684C12.8646 13.2164 12.9446 13.1364 12.9446 13.0401L12.944 11.3119C12.944 11.2157 12.864 11.1357 12.7677 11.1357L11.0565 11.1363C10.9603 11.1363 10.8803 11.2163 10.8803 11.3126V13.0244C10.864 13.1363 10.944 13.2163 11.0565 13.2163L11.0565 13.2164Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M3.19994 9.26372H4.91178C5.00803 9.26372 5.08803 9.18372 5.08803 9.08746V7.37627C5.08803 7.28002 5.00803 7.20001 4.91178 7.20001H3.19994C3.10369 7.20001 3.02368 7.28001 3.02368 7.37627V9.0881C3.02368 9.18373 3.10368 9.26374 3.19994 9.26374V9.26372Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M7.13635 9.26372H8.84819C8.94444 9.26372 9.02444 9.18372 9.02444 9.08746L9.02382 7.37627C9.02382 7.28002 8.94382 7.20001 8.84756 7.20001H7.13636C7.04011 7.20001 6.96011 7.28001 6.96011 7.37627V9.0881C6.94386 9.18373 7.02386 9.26374 7.13636 9.26374L7.13635 9.26372Z"
                          fill="#545F7D"
                        />
                        <path
                          d="M11.0565 9.26372H12.7684C12.8646 9.26372 12.9446 9.18372 12.9446 9.08746L12.944 7.37627C12.944 7.28002 12.864 7.20001 12.7677 7.20001H11.0565C10.9603 7.20001 10.8803 7.28001 10.8803 7.37627V9.0881C10.864 9.18373 10.944 9.26374 11.0565 9.26374L11.0565 9.26372Z"
                          fill="#545F7D"
                        />
                      </g>
                      <defs>
                        <clippath
                          id="clip0_5530_2554"
                        >
                          <rect
                            fill="white"
                            height="16"
                            width="16"
                          />
                        </clippath>
                      </defs>
                    </svg>
                  </a>
                  <input
                    id="date"
                    name="date"
                    type="date"
                    value="2023-04-25"
                  />
                </div>
              </div>
              <div
                class="form-group"
              >
                <label
                  for="phone"
                >
                  Phone Number
                </label>
                <input
                  placeholder="Phone Number"
                  type="text"
                />
              </div>
              <div
                class="form-group"
              >
                <label
                  for="status"
                >
                  Status
                </label>
                <div
                  data-id="status"
                  id="drop-down"
                >
                  <div
                    class="dropdown-btn"
                  >
                    <span>
                      Select
                    </span>
                    <a>
                      <svg
                        fill="none"
                        height="8"
                        viewBox="0 0 12 8"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                          fill="#213F7D"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="buttons"
              >
                <div
                  class="btn btn-outline-dark"
                >
                  Reset
                </div>
                <div
                  class="btn btn-green"
                >
                  Filter
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="table-body"
      >
        <div
          class="table-row"
        >
          <div
            class="table-col"
            style="width: calc(9ch + 26px);"
          >
            <span>
              Lendsqr
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      id="table-footer"
    >
      <div
        class="d-flex limits align-items-center"
      >
        <span>
          Showing
        </span>
        <div
          data-id="limit"
          id="drop-down"
        >
          <div
            class="dropdown-btn"
          >
            <span>
              10
            </span>
            <a>
              <svg
                fill="none"
                height="8"
                viewBox="0 0 12 8"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
                  fill="#213F7D"
                />
              </svg>
            </a>
          </div>
        </div>
        <span>
          out of 1
        </span>
      </div>
      <div
        class="d-flex indexes align-items-center"
      >
        <a
          class="active"
        >
          <svg
            fill="none"
            height="8"
            viewBox="0 0 12 8"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
              fill="#213F7D"
            />
          </svg>
        </a>
        <div
          class="numbers"
        >
          <span
            class="active"
          >
            1
          </span>
        </div>
        <a
          class="active"
        >
          <svg
            fill="none"
            height="8"
            viewBox="0 0 12 8"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0573 0.993798C10.8984 0.152706 12.1595 1.45646 11.3184 2.25489L6.56759 7.00565C6.23127 7.38408 5.64282 7.38408 5.3065 7.00565L0.640017 2.38131C-0.158963 1.54022 1.10267 0.27907 1.94322 1.12022L5.937 5.114L10.0573 0.993798Z"
              fill="#213F7D"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
